--- a/about.html
+++ b/about.html
@@ -2,30 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Prestige Pedicraft</title>
+  <title>About Prestige</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <!-- Header Navigation -->
+  <!-- Header Navigation (reuse same as index.html) -->
   <nav class="navbar">
     <a href="index.html" title="Prestige Pedicraft">
       <img src="assets/logo.png" alt="Prestige Pedicraft Logo" class="logo-nav"/>
     </a>
     <ul class="nav-menu">
       <li class="dropdown">
-        <a href="footwears.html">Footwears</a>
+        <a href="#">Footwears</a>
         <div class="dropdown-content">
-          <a href="footwears.html#slippers">Slippers</a>
-          <a href="footwears.html#sandals">Sandals</a>
-          <a href="footwears.html#shoes">Shoes</a>
+          <a href="#">Slippers</a>
+          <a href="#">Sandals</a>
+          <a href="#">Shoes</a>
         </div>
       </li>
       <li class="dropdown">
-        <a href="accessories.html">Accessories</a>
+        <a href="#">Accessories</a>
         <div class="dropdown-content">
-          <a href="accessories.html#travel-watch-case">Travel watch case</a>
-          <a href="accessories.html#wallets">Wallets</a>
-          <a href="accessories.html#belts">Belts</a>
+          <a href="#">Travel watch case</a>
+          <a href="#">Wallets</a>
+          <a href="#">Belts</a>
         </div>
       </li>
       <li>
@@ -33,11 +33,9 @@
       </li>
     </ul>
   </nav>
-
-  <!-- Main Content -->
   <main>
-    <h1>Welcome to Prestige Pedicraft</h1>
-    <!-- More content here -->
+    <h1>About Prestige Pedicraft</h1>
+    <!-- Add about content here later -->
   </main>
 </body>
 </html>
