--- a/accessories.html
+++ b/accessories.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Prestige Pedicraft</title>
+  <title>Accessories | Prestige Pedicraft</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <!-- Header Navigation -->
+  <!-- Header Navigation (reuse same as index.html) -->
   <nav class="navbar">
     <a href="index.html" title="Prestige Pedicraft">
       <img src="assets/logo.png" alt="Prestige Pedicraft Logo" class="logo-nav"/>
@@ -33,11 +33,20 @@
       </li>
     </ul>
   </nav>
-
-  <!-- Main Content -->
   <main>
-    <h1>Welcome to Prestige Pedicraft</h1>
-    <!-- More content here -->
+    <h1>Accessories</h1>
+    <section id="travel-watch-case">
+      <h2>Travel watch case</h2>
+      <!-- Content for Travel watch case -->
+    </section>
+    <section id="wallets">
+      <h2>Wallets</h2>
+      <!-- Content for Wallets -->
+    </section>
+    <section id="belts">
+      <h2>Belts</h2>
+      <!-- Content for Belts -->
+    </section>
   </main>
 </body>
 </html>
