--- a/footwears.html
+++ b/footwears.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Prestige Pedicraft</title>
+  <title>Footwears | Prestige Pedicraft</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <!-- Header Navigation -->
+  <!-- Header Navigation (reuse same as index.html) -->
   <nav class="navbar">
     <a href="index.html" title="Prestige Pedicraft">
       <img src="assets/logo.png" alt="Prestige Pedicraft Logo" class="logo-nav"/>
@@ -33,11 +33,20 @@
       </li>
     </ul>
   </nav>
-
-  <!-- Main Content -->
   <main>
-    <h1>Welcome to Prestige Pedicraft</h1>
-    <!-- More content here -->
+    <h1>Footwears</h1>
+    <section id="slippers">
+      <h2>Slippers</h2>
+      <!-- Content for Slippers -->
+    </section>
+    <section id="sandals">
+      <h2>Sandals</h2>
+      <!-- Content for Sandals -->
+    </section>
+    <section id="shoes">
+      <h2>Shoes</h2>
+      <!-- Content for Shoes -->
+    </section>
   </main>
 </body>
 </html>
